在实例中使用

--- a/数组常用方法/test.html
+++ b/数组常用方法/test.html
@@ -14,6 +14,11 @@
 
 </html>
 <script type='text/javascript'>
+	/*  
+		foreach()：里边进行读取和更新修改操作(R/读U/修改)，但修改操作不便于影响原数组。
+		map()：在map方法中进行更新修改操作最方便 。
+		splice()：在这个方法中进行CUD(f增/修/删)操作。(左闭 右开)
+    */
     /*  
     一、JS创建数组有两种方式
          1、使用Array构造函数
